tests/ui/masterror/fail/missing_category.stderr
error: missing `category = ...` in #[masterror(...)]
 --> tests/ui/masterror/fail/missing_category.rs:5:1
  |
5 | #[masterror(code = AppCode::Internal)]
  | ^

warning: unused import: `AppCode`
 --> tests/ui/masterror/fail/missing_category.rs:1:17
  |
1 | use masterror::{AppCode, Masterror};
  |                 ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
